[package]
name = "mediad"
version = "0.1.5"
license = "GPL-3.0"
authors = ["jojii <jojii@gmx.net>"]
repository = "https://github.com/JojiiOfficial/MediaD"
description = "A Simple and lightweight daemon to handle keyboard media buttons easily"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = "0.10.2"
mpris = "2.0.0-rc2"
rust-pulsectl-fork = "0.2.12"
epoll = "4.3.1"
human-panic = "1.0.3"
lazy_static = "1.4.0"
